--- a/public/browser.html
+++ b/public/browser.html
@@ -1098,7 +1098,7 @@
 
   async function handleUpload(fileList) {
     const formData = new FormData();
-    const imageExts = ['jpg','jpeg','png','svg','webp','bmp'];
+    const imageExts = ['jpg','jpeg','png','svg','webp','bmp','ico'];
     const videoExts = ['mp4','avi','mov','wmv','flv','webm','mkv'];
     const docExts = ['pdf','docx'];
 
